Fix gap between the image & content for the product tiles on PLP
By @renatamottam!

--- a/src/components/ui/AspectRatio/aspect-ratio.scss
+++ b/src/components/ui/AspectRatio/aspect-ratio.scss
@@ -2,7 +2,7 @@
   position: relative;
   display: block;
   width: 100%;
-  height: 0;
+  height: 100%;
   overflow: hidden;
 
   /*
